<resources>
    <string name="app_name">PC CO-Builder</string>
    <string name="sloganP1">Build a PC</string>
    <string name="sloganP2">Build a world</string>
    <string name="description">Build your PC the way you like, the way you want</string>
    <string name="build">BUILD</string>
    <string name="Q1">What will you mostly be doing with your PC?</string>
    <string name="game">GAME</string>
    <string name="office">OFFICE</string>
    <string name="design">DESIGN</string>
    <string name="mix">MIX</string>
    <string name="next">NEXT</string>
    <string name="backgroundDes">Background image of a high end PC</string>
    <string name="logoDes">Image of the H2SO4–1191 logo</string>
    <string name="Q2">What\'s your budget for a PC?</string>
    <string name="low">LOW</string>
    <string name="mid">MID</string>
    <string name="high">HIGH</string>
    <string name="finish">Finish</string>
    <string name="building">Building your dream PC…</string>
    <string name="home">HOME</string>
    <string name="H2SO41191">H2SO4–1191</string>
</resources>