<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Purpose">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pc_background_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/backgroundDes"/>

    <TextView
        android:id="@+id/shadow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/app_name"
        android:textColor="#f72585"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Q1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alike_angular"
        android:text="@string/Q1"
        android:textAlignment="center"
        android:textColor="@color/fore"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/next"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/tributton"
        android:backgroundTint="@null"
        android:fontFamily="@font/aclonica"
        android:foreground="@drawable/rippletri"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.946" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Q1">

        <ToggleButton
            android:id="@+id/game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/swicth"
            android:backgroundTint="@null"
            android:fontFamily="@font/alike_angular"
            android:foreground="@drawable/ripple"
            android:text="@string/game"
            android:textAlignment="center"
            android:textOff="@string/game"
            android:textOn="@string/game"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/game" />

        <ToggleButton
            android:id="@+id/office"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/swicth2"
            android:backgroundTint="@null"
            android:fontFamily="@font/alike_angular"
            android:foreground="@drawable/ripple"
            android:text="@string/office"
            android:textAlignment="center"
            android:textOff="@string/office"
            android:textOn="@string/office"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/office" />

        <ToggleButton
            android:id="@+id/design"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/swicth"
            android:backgroundTint="@null"
            android:fontFamily="@font/alike_angular"
            android:foreground="@drawable/ripple"
            android:text="@string/design"
            android:textAlignment="center"
            android:textOff="@string/design"
            android:textOn="@string/design"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/design" />

        <ToggleButton
            android:id="@+id/mix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/swicth2"
            android:backgroundTint="@null"
            android:fontFamily="@font/alike_angular"
            android:foreground="@drawable/ripple"
            android:text="@string/mix"
            android:textAlignment="center"
            android:textOff="@string/mix"
            android:textOn="@string/mix"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/mix" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>